...
    <!--Application titles-->
    <string name="app_name">LectureMate</string>
    <string name="action_settings">Settings</string>


    <!--View titles-->
    <string name="title_activity_NotesList">Notes</string>
    <string name="title_activity_LecturesList">Lectures</string>
    <string name="title_activity_ImagesList">Images</string>
    <string name="title_activity_DatesList">Dates</string>
    <string name="title_activity_VideosList">Videos</string>

    <string name="title_activity_NotesCreate">Create Note</string>
    <string name="title_activity_ImagesCreate">Save Image</string>
    <string name="title_activity_VideosCreate">Save Video</string>
    <string name="title_activity_DatesCreate">Create Date</string>
...
