<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.intelligent.morning06.lecturemate.NotesCreateActivity">
    <item
        android:id="@+id/notes_create_activity_action_save"
        android:icon="@drawable/icon_save"
        android:title="left"
        app:showAsAction="always"/>
    <item
        android:id="@+id/notes_create_activity_action_cancel"
        android:icon="@drawable/icon_cancel"
        android:title="right"
        app:showAsAction="always"/>
</menu>
